Adding Adsense Add

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <script src="scripts/Custom/fancybox3/jquery.fancybox.js" defer="defer" type="text/javascript"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCW30GC_75mPsIR1FQCm_7TM8Xk_PHAYk0&language=en&callback=initMap" defer="defer" type="text/javascript"></script>
   <script src="scripts/Custom/audio.js"></script>
+
 </head>
 
 <body onload="spinnerHide(); startTime() ">
@@ -98,8 +99,18 @@
   </div>
 
   <header class="header">
+
     <div class="top-spacer"></div>
     <div class="header-contents">
+      <div> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- first add -->
+        <ins class="adsbygoogle"
+             style="display:inline-block;width:970px;height:250px"
+             data-ad-client="ca-pub-3173024995464221"
+             data-ad-slot="8175446336"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script></div>
       <div class="header-top-bar">
         <div class="container">
           <div class="row">
