Adsense adding in the head tag

--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
   <script src="scripts/Custom/fancybox3/jquery.fancybox.js" defer="defer" type="text/javascript"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCW30GC_75mPsIR1FQCm_7TM8Xk_PHAYk0&language=en&callback=initMap" defer="defer" type="text/javascript"></script>
   <script src="scripts/Custom/audio.js"></script>
-
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-3173024995464221",
+          enable_page_level_ads: true
+      });
+  </script>
 </head>
 
 <body onload="spinnerHide(); startTime() ">
@@ -102,7 +108,8 @@
 
     <div class="top-spacer"></div>
     <div class="header-contents">
-      <div> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <div>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <!-- first add -->
         <ins class="adsbygoogle"
              style="display:inline-block;width:970px;height:250px"
