--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head id="head">
   <title>Bahnevi Apartments</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+  <meta name="google-site-verification" content="UC4jRLXD0IZ9llmZXET3LqIknWuNrU5bSEcAB5aOT5o" />
   <link type="text/css" rel="stylesheet"
         href="scripts/ui-lightness/jquery-ui.css"/>
   <link href="styles/main.css" type="text/css" rel="stylesheet"/>
