remove "adds by google space/div"

--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
     <div class="top-spacer"></div>
     <div class="header-contents">
       <div>
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <!-- first add -->
-        <ins class="adsbygoogle"
-             style="display:inline-block;width:970px;height:250px"
-             data-ad-client="ca-pub-3173024995464221"
-             data-ad-slot="8175446336"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script></div>
+        <!--<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
+        <!--&lt;!&ndash; first add &ndash;&gt;-->
+        <!--<ins class="adsbygoogle"-->
+             <!--style="display:inline-block;width:970px;height:250px"-->
+             <!--data-ad-client="ca-pub-3173024995464221"-->
+             <!--data-ad-slot="8175446336"></ins>-->
+        <!--<script>-->
+            <!--(adsbygoogle = window.adsbygoogle || []).push({});-->
+        <!--</script></div>-->
       <div class="header-top-bar">
         <div class="container">
           <div class="row">
