removing space/div

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <div class="browserColumn">
                 <a class="browserLink" href="https://support.apple.com/downloads/safari" target="_blank">
                   <span class="browserImage"><img src=" " alt=""/></span>
-                  <span class="browserName">Safari</span>
+                  <span class="browserName">Safari br</span>
                 </a>
               </div>
             </div>
