--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <a class="browserLink" href="https://www.microsoft.com/en-us/download/internet-explorer.aspx"
                    target="_blank">
                   <span class="browserImage"><img src=" " alt=""/></span>
-                  <span class="browserName">Internet Explorer </span>
+                  <span class="browserName">Internet Explorer11 </span>
                 </a>
               </div>
             </div>
