Fixing heading in every page (centering + rgba background)

--- a/index.html
+++ b/index.html
@@ -294,8 +294,7 @@
       <div class="container">
         <div class="row">
           <div class="home-banner-text">
-            <h3 class="page-title">Welcome to BAHNEVI APARTMENTS</h3>
-            <p style="text-align: center;"><span style="text-align: left;"></span><br/></p>
+            <h3 class="page-title"><span>Welcome to BAHNEVI APARTMENTS</span></h3>
             <div><br/>
             </div>
           </div>
