--- a/main/madara.html
+++ b/main/madara.html
@@ -310,8 +310,7 @@
   <div class="home-section9">
     <div class="container">
       <div class="row">
-        <div class="home-banner-text"><h3 class="page-title">Welcome to MADARA APARTMENT</h3>
-          <p style="text-align: center;"><span style="text-align: left;"></span><br/></p>
+        <div class="home-banner-text"><h3 class="page-title"><span>Welcome to MADARA APARTMENT</span></h3>
           <div><br/></div>
         </div>
       </div>
