--- a/main/basanovich.html
+++ b/main/basanovich.html
@@ -314,8 +314,7 @@
       <div class="container">
         <div class="row">
           <div class="home-banner-text">
-            <h3 class="page-title">Welcome to BASANOVICH APARTMENT</h3>
-            <p style="text-align: center;"><span style="text-align: left;"></span><br/></p>
+            <h3 class="page-title"><span>Welcome to BASANOVICH APARTMENT</span></h3>
             <div><br/></div>
           </div>
         </div>
