--- a/main/nikolaevich.html
+++ b/main/nikolaevich.html
@@ -310,8 +310,7 @@
     <div class="home-section7">
       <div class="container">
         <div class="row">
-          <div class="home-banner-text"><h3 class="page-title">Welcome to Nikolaevich APARTMENT</h3>
-            <p style="text-align: center;"><span style="text-align: left;"></span><br/></p>
+          <div class="home-banner-text"><h3 class="page-title"><span>Welcome to Nikolaevich APARTMENT</span></h3>
             <div>
               <br/>
             </div>
