--- a/main/savaradulov2.html
+++ b/main/savaradulov2.html
@@ -306,8 +306,7 @@
   <div class="home-section10">
     <div class="container">
       <div class="row">
-        <div class="home-banner-text"><span>Welcome to Sava Radulov apartment</span>
-          <p style="text-align: center;"><span style="text-align: left;"></span><br/></p>
+        <div class="home-banner-text"><h3><span>Welcome to Sava Radulov apartment</span></h3>
           <div><br/></div>
         </div>
       </div>
